# generate_ipv4_addresses_rust

./: Cargo.toml
src/: demo01_生成CIDR范围内的所有IP地址(使用ipnetwork依赖+ip_network函数的迭代).rs  demo02_生成CIDR范围内的所有IP地址(使用ipnetwork依赖+递增IP地址的写法).rs  main - 01_写入一个文件中.rs  main - 02_单个cidr地址生成器.rs  main - 03_外部cidr.txt文件，批量cidr地址生成器.rs  main - 04_分割（等份和最大上限).rs  main.rs
